2nd training/Community/Community/Community1/force-app/main/default/objects/Service_Order__c/Service_Order__c.object-meta.xml
<CustomObject>
    <label>Service Order</label>
    <nameField>
        <displayFormat>SO{YY}{MM}{DD}-{00000}</displayFormat>
        <label>Service Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>