2nd training/Community/Community/Community1/force-app/main/default/objects/Service_Order__c/fields/Attention__c.field-meta.xml
<CustomField>
    <fullName>Attention__c</fullName>
    <label>Contact Person &amp; Details</label>
    <type>TextArea</type>
</CustomField>