2nd training/Community/Community/Community1/force-app/main/default/objects/Service_Order__c/fields/Description_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Service__c</fullName>
    <label>Description of Service</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>