2nd training/Community/Community/Community1/force-app/main/default/objects/Service_Order__c/fields/Mus_Date__c.field-meta.xml
<CustomField>
    <fullName>Mus_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>