2nd training/Community/Community/Community1/force-app/main/default/objects/Service_Order__c/fields/Mus_OT_No_of_Men__c.field-meta.xml
<CustomField>
    <fullName>Mus_OT_No_of_Men__c</fullName>
    <label>No of Men (OT)</label>
    <length>45</length>
    <type>Text</type>
</CustomField>