2nd training/Community/Community/Community1/force-app/main/default/objects/Service_Order__c/fields/Mus_OT_Time_Completed__c.field-meta.xml
<CustomField>
    <fullName>Mus_OT_Time_Completed__c</fullName>
    <label>Time Completed (OT)</label>
    <type>DateTime</type>
</CustomField>