2nd training/Community/Community/Community1/force-app/main/default/objects/Service_Order__c/fields/Mus_Time_Start__c.field-meta.xml
<CustomField>
    <fullName>Mus_Time_Start__c</fullName>
    <label>Time Start</label>
    <type>DateTime</type>
</CustomField>