2nd training/Community/Community/Community1/force-app/main/default/objects/Service_Order__c/fields/Service_Address__c.field-meta.xml
<CustomField>
    <fullName>Service_Address__c</fullName>
    <label>Service Address</label>
    <type>TextArea</type>
</CustomField>