2nd training/Community/Community/Community1/force-app/main/default/objects/Service_Order__c/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <description>For General Use</description>
    <label>General</label>
</RecordType>