2nd training/Community/Community/Community1/force-app/main/default/objects/Service_Order__c/recordTypes/Museum.recordType-meta.xml
<RecordType>
    <fullName>Museum</fullName>
    <active>true</active>
    <description>For Museum use</description>
    <label>Museum</label>
</RecordType>