2nd training/Community/Community/Community1/force-app/main/default/objects/Service_Order__c/recordTypes/SO_BJ.recordType-meta.xml
<RecordType>
    <fullName>SO_BJ</fullName>
    <active>true</active>
    <description>Service order for Beijing</description>
    <label>SO BJ</label>
</RecordType>